[origin/task/ECCW-399-Service-listing-gaps] fixed extra gap that is due to the layout

--- a/themes/custom/essex/css/overrides.css
+++ b/themes/custom/essex/css/overrides.css
@@ -928,3 +928,8 @@ footer .lgd-footer__footer a {
   object-fit: cover;
   aspect-ratio: 9/5;
 }
+
+.path-frontpage .layout--threecol-33-34-33 .layout__region--top,
+.path-frontpage .layout--threecol-33-34-33 .layout__region--bottom {
+  padding: 0
+}
